[gd_scene load_steps=9 format=2]

[ext_resource path="res://vehicle.gd" type="Script" id=1]
[ext_resource path="res://pickup_labels.gd" type="Script" id=2]
[ext_resource path="res://MeshInstance.tscn" type="PackedScene" id=3]

[sub_resource type="PhysicsMaterial" id=5]

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.0235294, 0.0235294, 0.0235294, 1 )

[sub_resource type="CylinderMesh" id=3]
material = SubResource( 6 )
top_radius = 0.5
bottom_radius = 0.5
height = 0.5

[sub_resource type="BoxShape" id=1]
extents = Vector3( 1, 0.5, 2 )

[sub_resource type="CylinderShape" id=7]
height = 4.0
radius = 10.0

[node name="vehicle" type="VehicleBody"]
collision_layer = 2
mass = 20.0
physics_material_override = SubResource( 5 )
continuous_cd = true
axis_lock_linear_x = true
axis_lock_linear_z = true
axis_lock_angular_x = true
axis_lock_angular_y = true
axis_lock_angular_z = true
script = ExtResource( 1 )
pickup_area = NodePath("pickup_area")
pickup_labels = NodePath("pickup_area/pickup_labels")

[node name="FrontLeft" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0.5, 2 )
brake = 0.5
use_as_steering = true
wheel_friction_slip = 1.0
suspension_stiffness = 50.0
suspension_max_force = 160.0
damping_compression = 0.7
damping_relaxation = 0.7

[node name="MeshInstance" type="MeshInstance" parent="FrontLeft"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 3 )

[node name="FrontRight" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0.5, 2 )
brake = 0.5
use_as_steering = true
wheel_friction_slip = 1.0
suspension_stiffness = 50.0
suspension_max_force = 160.0
damping_compression = 0.7
damping_relaxation = 0.7

[node name="MeshInstance" type="MeshInstance" parent="FrontRight"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 3 )

[node name="BackLeft" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0.5, -1.5 )
brake = 0.5
use_as_traction = true
wheel_friction_slip = 1.0
suspension_stiffness = 50.0
suspension_max_force = 160.0
damping_compression = 0.7
damping_relaxation = 0.7

[node name="MeshInstance" type="MeshInstance" parent="BackLeft"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 3 )

[node name="BackRight" type="VehicleWheel" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.5, 0.5, -1.5 )
brake = 0.5
use_as_traction = true
wheel_friction_slip = 1.0
suspension_stiffness = 50.0
suspension_max_force = 160.0
damping_compression = 0.7
damping_relaxation = 0.7

[node name="MeshInstance" type="MeshInstance" parent="BackRight"]
transform = Transform( -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0 )
mesh = SubResource( 3 )

[node name="Spatial" type="Spatial" parent="."]

[node name="MeshInstance" parent="Spatial" instance=ExtResource( 3 )]

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0.2 )
shape = SubResource( 1 )

[node name="pickup_area" type="Area" parent="."]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape" type="CollisionShape" parent="pickup_area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
shape = SubResource( 7 )

[node name="pickup_labels" type="VBoxContainer" parent="pickup_area"]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -110.0
margin_top = -60.0
margin_right = 110.0
margin_bottom = -20.0
script = ExtResource( 2 )
action_label = NodePath("action")
object_name_label = NodePath("object_name")

[node name="action" type="Label" parent="pickup_area/pickup_labels"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 220.0
margin_bottom = 14.0
text = "Press E to *action*"
align = 1

[node name="object_name" type="Label" parent="pickup_area/pickup_labels"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 18.0
margin_right = 220.0
margin_bottom = 32.0
text = "object name"
align = 1

[connection signal="area_exited" from="pickup_area" to="." method="_on_pickup_area_exited"]
